deploy: 74ea2a2f18c73deebc3f9696e2dedfe8a5e282ab

--- a/certified_datapacks/index.html
+++ b/certified_datapacks/index.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#certified-datapacks" id="certified-datapacks">Certified Datapacks</a></h1>
+                        <h1 id="certified-datapacks"><a class="header" href="#certified-datapacks">Certified Datapacks</a></h1>
 <ul>
 <li>
 <p>Datapacks that have followed the bare metal <strong>Tier 3</strong> conventions are allowed to use this banner
@@ -177,7 +177,7 @@
 <blockquote>
 <p>Certified Datapacks have the benefit that they are guaranteed to be compatible with other datapacks.</p>
 </blockquote>
-<h1><a class="header" href="#social-media" id="social-media">Social Media</a></h1>
+<h1 id="social-media"><a class="header" href="#social-media">Social Media</a></h1>
 <p>We have created an &quot;official tag&quot; for various platform that you can include to indicate that your content is certified.</p>
 <blockquote>
 <p>You <strong>must not</strong> use these tags in an attempt to appear as certified if your datapack is not certified!</p>
