--- a/certified_datapacks/requirement.html
+++ b/certified_datapacks/requirement.html
@@ -163,13 +163,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#requirement" id="requirement">Requirement</a></h1>
+                        <h1 id="requirement"><a class="header" href="#requirement">Requirement</a></h1>
 <p>A datapack must satisfy these requirements to receive the Certified Datapack title</p>
 <ul>
 <li>Datapack must be portable, it must not be tied down to a specific save.</li>
 <li>Datapack must follow all of <strong>Tier 3</strong> Conventions.</li>
 </ul>
-<h2><a class="header" href="#note" id="note">Note</a></h2>
+<h2 id="note"><a class="header" href="#note">Note</a></h2>
 <ol>
 <li>We may rule a datapack out at our discretion, for reasons we would then specify.</li>
 <li>This requirement is not final and can be changed in the future.</li>
