--- a/conventions/index.html
+++ b/conventions/index.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#official-conventions" id="official-conventions">Official Conventions</a></h1>
+                        <h1 id="official-conventions"><a class="header" href="#official-conventions">Official Conventions</a></h1>
 <p>These are the official conventions that everyone should follow for datapack compatibility.</p>
 
                     </main>
