--- a/conventions/shulker_box_loot_table.html
+++ b/conventions/shulker_box_loot_table.html
@@ -163,10 +163,10 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#shulker-box-loot-table-" id="shulker-box-loot-table-">Shulker Box Loot Table (<code>***</code>)</a></h1>
-<h2><a class="header" href="#about" id="about">About</a></h2>
+                        <h1 id="shulker-box-loot-table-"><a class="header" href="#shulker-box-loot-table-">Shulker Box Loot Table (<code>***</code>)</a></h1>
+<h2 id="about"><a class="header" href="#about">About</a></h2>
 <p>This convention aims to make <a href="../tips/shulker_box_inventory_manipulation.html">Shulker Box Inventory Manipulation</a> as conflict-free as possible by enforcing a specific loot table for the <code>minecraft:yellow_shulker_box</code> block.</p>
-<h2><a class="header" href="#implementation" id="implementation">Implementation</a></h2>
+<h2 id="implementation"><a class="header" href="#implementation">Implementation</a></h2>
 <p>Simply use this loot table inside <code>/data/minecraft/loot_tables/blocks/yellow_shulker_box.json</code> when you want to use the <a href="../tips/shulker_box_inventory_manipulation.html">Inventory Manipulation</a> trick.</p>
 <pre><code class="language-json">{
   &quot;type&quot;: &quot;minecraft:block&quot;,
@@ -236,7 +236,7 @@
   ]
 }
 </code></pre>
-<h2><a class="header" href="#reference" id="reference">Reference</a></h2>
+<h2 id="reference"><a class="header" href="#reference">Reference</a></h2>
 <ul>
 <li><a href="../tips/shulker_box_inventory_manipulation.html">Shulker Box Inventory Manipulation</a></li>
 </ul>
