--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#about" id="about">About</a></h1>
+                        <h1 id="about"><a class="header" href="#about">About</a></h1>
 <p>Minecraft Datapacks is a community-driven Minecraft server about datapacks.</p>
 <p>But datapacks are prone to conflicts, which means we need a way to ensure compatibility between many datapacks to create a stable and friendly datapack ecosystem.</p>
 <p><a href="https://discord.gg/SnJQcfq">Discord</a></p>
-<h2><a class="header" href="#how-we-are-going-to-do-it" id="how-we-are-going-to-do-it">How we are going to do it</a></h2>
+<h2 id="how-we-are-going-to-do-it"><a class="header" href="#how-we-are-going-to-do-it">How we are going to do it</a></h2>
 <p>To achieve this, we decide to create the Datapack Conventions, which will help improve compatibility between datapacks.</p>
-<h2><a class="header" href="#contribution" id="contribution">Contribution</a></h2>
+<h2 id="contribution"><a class="header" href="#contribution">Contribution</a></h2>
 <p>If you wish to contribute to this project, you can do it via <a href="https://github.com/mc-datapacks">this Github repository</a>.</p>
 <p>As of right now, there are 3 types of contribution: <strong>Grammar Contributions</strong>, <strong>Tips Contributions</strong> and <strong>Convention Contributions</strong>.</p>
 <ol>
@@ -177,7 +177,7 @@
 <li>A <strong>Tips Contribution</strong> is a contribution to the &quot;tips&quot; section of this repository, similar to <strong>Grammar Contributions</strong> you need to make a pull-request and wait for the approval.</li>
 <li>A <strong>Convention Contribution</strong> is a contribution to the &quot;conventions&quot; section of this repository. To contribute to the conventions, please read the below section.</li>
 </ol>
-<h3><a class="header" href="#convention-contribution" id="convention-contribution">Convention Contribution</a></h3>
+<h3 id="convention-contribution"><a class="header" href="#convention-contribution">Convention Contribution</a></h3>
 <p>To contribute to the official conventions, you must first create an issue with the <code>Convention Suggestion</code> label in this format:</p>
 <ol>
 <li>explanation of the convention.</li>
@@ -185,7 +185,7 @@
 <li>explanation of why it should be added.</li>
 </ol>
 <p>After that, we will discuss it, modify it, then vote on whether to add it or not. If the vote passed, you can then submit a pull-request and wait for the approval.</p>
-<h2><a class="header" href="#becoming-datapack-reviewer" id="becoming-datapack-reviewer">Becoming Datapack Reviewer</a></h2>
+<h2 id="becoming-datapack-reviewer"><a class="header" href="#becoming-datapack-reviewer">Becoming Datapack Reviewer</a></h2>
 <p>While the process for selecting a reviewer has not been finalized yet, you can contact Boomber#5154 inside discord.</p>
 
                     </main>
