--- a/style_guideline/datapack_advancement.html
+++ b/style_guideline/datapack_advancement.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#datapack-advancement" id="datapack-advancement">Datapack Advancement</a></h1>
+                        <h1 id="datapack-advancement"><a class="header" href="#datapack-advancement">Datapack Advancement</a></h1>
 <p>You <strong>must</strong> implement the <a href="../conventions/datapack_advancement.html">Datapack Advancement</a> convention as shown in that page.
 It group every installed datapacks in one place that is easily accessible for anyone.</p>
 
