--- a/style_guideline/datapack_uninstallation.html
+++ b/style_guideline/datapack_uninstallation.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#datapack-uninstallation" id="datapack-uninstallation">Datapack Uninstallation</a></h1>
+                        <h1 id="datapack-uninstallation"><a class="header" href="#datapack-uninstallation">Datapack Uninstallation</a></h1>
 <p>You <strong>must</strong> implement the <a href="../conventions/datapack_uninstallation.html">Datapack Uninstallation</a> convention as shown on that page and also tell the users <em>how</em> they can uninstall the datapack in the project page.</p>
 
                     </main>
