--- a/style_guideline/reloading_message.html
+++ b/style_guideline/reloading_message.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#reloading-message" id="reloading-message">Reloading Message</a></h1>
+                        <h1 id="reloading-message"><a class="header" href="#reloading-message">Reloading Message</a></h1>
 <p>You <strong>must not</strong> send an automatic message when the world is reloaded. It will clutter the chat unnecessarily and create a bad experience for the users.</p>
 <p>Most of the time, the message will be an installation message, in which case you can use <a href="../conventions/datapack_advancement.html">Datapack Advancement</a> instead.</p>
 
