--- a/tips/index.html
+++ b/tips/index.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#tips" id="tips">Tips</a></h1>
+                        <h1 id="tips"><a class="header" href="#tips">Tips</a></h1>
 <p>Various tips and tricks for developing datapacks.</p>
 
                     </main>
