--- a/style_guideline/index.html
+++ b/style_guideline/index.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#style-guideline" id="style-guideline">Style Guideline</a></h1>
+                        <h1 id="style-guideline"><a class="header" href="#style-guideline">Style Guideline</a></h1>
 <p>The guideline is an extension of the certified datapacks system. It contains information about how you should design a datapack for consistency with other datapacks.</p>
 <p>Following this guideline will not necessarily improve compatibility between datapacks, but it will improve consistency in design between datapacks.</p>
 <p>The guideline is separated into multiple pages for readability, you can find them here:</p>
