--- a/tips/holding_right_click_detection.html
+++ b/tips/holding_right_click_detection.html
@@ -163,21 +163,21 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#holding-right-click-detection" id="holding-right-click-detection">Holding Right Click Detection</a></h1>
-<h2><a class="header" href="#about" id="about">About</a></h2>
+                        <h1 id="holding-right-click-detection"><a class="header" href="#holding-right-click-detection">Holding Right Click Detection</a></h1>
+<h2 id="about"><a class="header" href="#about">About</a></h2>
 <p>This method allows you to detect when player is &quot;holding&quot; right click, using a carrot on a stick.</p>
 <blockquote>
 <p>Note: I will be referring to &quot;carrot on a stick&quot; as &quot;coas&quot; from now on</p>
 </blockquote>
-<h2><a class="header" href="#result" id="result">Result</a></h2>
+<h2 id="result"><a class="header" href="#result">Result</a></h2>
 <blockquote>
 <p>A simple spell casting system where a spell will be cast when the player holds right click for a period of time</p>
 </blockquote>
 <p><img src="./holding_right_click_detection/result.gif" alt="result" /></p>
-<h2><a class="header" href="#concept" id="concept">Concept</a></h2>
+<h2 id="concept"><a class="header" href="#concept">Concept</a></h2>
 <p>To detect when player is holding right click, you need to know when player right clicks <code>coas</code> <em>twice</em> within a time threshold.<br />
 Because Minecraft takes in <code>coas</code> input every 4 tick, a right click is considered continuous if it's performed within 5 ticks of another click.</p>
-<h2><a class="header" href="#implementation" id="implementation">Implementation</a></h2>
+<h2 id="implementation"><a class="header" href="#implementation">Implementation</a></h2>
 <p>1. Setup scoreboard objectives</p>
 <pre><code>#[setup]
 
@@ -210,12 +210,12 @@ scoreboard players set @s &lt;coas&gt; 0
 <p>5. Conclusion
 If <code>&lt;timer&gt;</code> is more than 0, we know that the player has right clicked within the last 5 ticks, since <code>&lt;timer&gt;</code> decreases by 1 every tick, and every time a right click is performed <code>&lt;timer&gt;</code> is set to 5 again.<br />
 We can use <code>execute if score @s &lt;timer&gt; matches 1..</code> to know if <code>&lt;timer&gt;</code> is more than or equal to 1.</p>
-<h2><a class="header" href="#note" id="note">Note</a></h2>
+<h2 id="note"><a class="header" href="#note">Note</a></h2>
 <ul>
 <li><code>&lt;...&gt;</code> is a placeholder value that you have to replace with your own value.</li>
 <li><code>[...]</code> is a placeholder path to display relationship between each functions.</li>
 </ul>
-<h2><a class="header" href="#example-datapack" id="example-datapack">Example Datapack</a></h2>
+<h2 id="example-datapack"><a class="header" href="#example-datapack">Example Datapack</a></h2>
 <p>You can download the <a href="./holding_right_click_detection/example.zip">example datapack</a> here.</p>
 <p>This example pack contains extra code used to display the title message to player.</p>
 <p>Happy Datapacking!
