--- a/tips/shulker_box_inventory_manipulation.html
+++ b/tips/shulker_box_inventory_manipulation.html
@@ -163,12 +163,12 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#shulker-box-inventory-manipulation" id="shulker-box-inventory-manipulation">Shulker Box Inventory Manipulation</a></h1>
-<h2><a class="header" href="#about" id="about">About</a></h2>
+                        <h1 id="shulker-box-inventory-manipulation"><a class="header" href="#shulker-box-inventory-manipulation">Shulker Box Inventory Manipulation</a></h1>
+<h2 id="about"><a class="header" href="#about">About</a></h2>
 <p>This technique allows us to manipulate the player's inventory just like any other NBT using the shulker box's loot table.</p>
-<h2><a class="header" href="#concept" id="concept">Concept</a></h2>
+<h2 id="concept"><a class="header" href="#concept">Concept</a></h2>
 <p>We take advantage of the fact that the shulker box can be configured to drop their content on the ground instead of dropping a shulker box containing its content, which can then be used by the <code>/loot</code> command to replace the player's inventory.</p>
-<h2><a class="header" href="#implementation" id="implementation">Implementation</a></h2>
+<h2 id="implementation"><a class="header" href="#implementation">Implementation</a></h2>
 <p>1. To comply with the <a href="/conventions/index.html">Official Conventions</a>, you will have to modify the loot table of <code>minecraft:yellow_shulker_box</code> to the loot table below. The loot table will drop its content on the ground when it's mined by an item with NBT <code>{drop_contents: 1b}</code>. For compatibility reasons, <code>air</code> must be used as the item.<br />
 <a href="https://pastebin.com/4sspBvep"><center>https://pastebin.com/4sspBvep</center></a></p>
 <p>2. Create a placeholder shulker box that you will use to modify the player's inventory. Usually, this should be placed far away from the player's view, but for simplicity's sake, I'll place it at <code>~ ~ ~</code>.</p>
@@ -214,7 +214,7 @@ loot replace entity &lt;player&gt; weapon.offhand 1 mine ~ ~ ~ air{drop_contents
 data remove storage &lt;storage&gt; batch
 data remove storage &lt;storage&gt; inventory
 </code></pre>
-<h2><a class="header" href="#note" id="note">Note</a></h2>
+<h2 id="note"><a class="header" href="#note">Note</a></h2>
 <p>In this example, I assume that you need to modify NBT of all available slots, but if you want to, say, modify only items in your hotbar, then you don't need to use the unneeded batches, e.g. the &quot;inventory&quot;, &quot;armor&quot; and &quot;offhand&quot; batches.</p>
 
                     </main>
